# KaiSei

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md
src/: main.cpp
src/Backend/define/: CFG_define.cpp  IA_define.cpp  LVA_define.cpp  RA_define.cpp  backend_define.cpp
src/Backend/include/: CFG.h  IA.h  LVA.h  RA.h  define_backend.h
src/Backend/opt/: CFG.cpp  IA.cpp  LVA.cpp  RA.cpp
src/Frontend/IR/: IR.cpp
src/Frontend/define/: AST_node.cpp  IR_define.cpp  define.cpp  symtable.cpp
src/Frontend/include/: AST.h  IR.h  define.h  expr.h  keystmt.h  lexical.h  opt.h  shell.h
src/Frontend/lexical/: lexical.cpp
src/Frontend/parsing/: AST.cpp  expr.cpp  keystmt.cpp  opt.cpp
